--- a/public/partials/footer.html
+++ b/public/partials/footer.html
@@ -3,13 +3,13 @@
 		<div class="container">
 			<div class="span12">
 				<div class="social-links pull-right">
-					<a class="facebook-alt" href="http://www.facebook.com/RankingUY" target="_blank"></a>
-					<a class="twitter-alt" href="http://www.twitter.com/RankingUruguay" target="_blank"></a>
-					<a class="instagram-alt" href="https://www.instagram.com/ranking.uy/" target="_blank"></a>
+					<a class="facebook-alt" href="http://www.facebook.com/BlogUY" target="_blank"></a>
+					<a class="twitter-alt" href="http://www.twitter.com/BlogUy" target="_blank"></a>
+					<a class="instagram-alt" href="https://www.instagram.com/BlogUy/" target="_blank"></a>
 					<a class="googleplus-alt" href="http://goo.gl/zmxExX" target="_blank"></a>
 				</div>
 				<div class="row pull-left copyright">	
-					<div class="col-sm-12">Copyright &copy; 2016 - <a href="http://www.ranking.uy">Ranking.uy</a></div>
+					<div class="col-sm-12">Copyright &copy; 2016 - <a href="http://www.blog.uy">Blog.uy</a></div>
 				</div>	
 			</div>
 			
