--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,4 +1,54 @@
-<nav class="navbar navbar-default menu-bg" role="navigation">
+ <!-- Navigation -->
+<nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#blog-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                Menu <i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand" href="index.html">Blog</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="blog-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="post.html">Sample Post</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+
+<!-- Page Header -->
+<!-- Page Header -->
+<!-- Set your background image for this header on the line below. -->
+<header class="intro-header" style="background-image: url('images/portada.jpg')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="site-heading">
+                    <h1>Un Blog</h1>
+                    <hr class="small">
+                    <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!--<nav class="navbar navbar-default menu-bg" role="navigation">
   <div class="container">
 	  <div class="navbar-header col-md-4 col-sm-5">
 	  	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -7,33 +57,20 @@
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
 	    </button>
-	    <a class="navbar-brand" href="http://www.ranking.uy">
-            <img class="logo img-responsive" src="../images/ranklogo.png" alt="">
-        </a>
-	    <h1>Ranking.UY</h1>
+	    <a class="navbar-brand" href="http://www.blog.uy">
+            <!-- <img class="logo img-responsive" src="../images/ranklogo.png" alt=""> -->
+<!--        </a>
+	    <h1>Blog.UY</h1>
 	  </div>
 
 	  <div class="collapse navbar-collapse navbar-ex1-collapse" ng-controller="HeaderController">
 	    <ul class="nav navbar-nav navbar-right">
-	      <li ng-class="{ active: isActive('/vote')}"><a href="/#/vote" data-toggle="collapse" data-target=".navbar-ex1-collapse">VOTAR</a></li>
-	      <li ng-class="{ active: isActive('/ranking')}"><a href="/#/ranking" data-toggle="collapse" data-target=".navbar-ex1-collapse">RANKING</a></li>
-	      <li ng-class="{ active: isActive('/rankClubs')}"><a href="/#/rankClubs" data-toggle="collapse" data-target=".navbar-ex1-collapse">EQUIPOS</a></li>
+	      <li ng-class="{ active: isActive('/vote')}"><a href="/#/vote" data-toggle="collapse" data-target=".navbar-ex1-collapse">Menu 1</a></li>
+	      <li ng-class="{ active: isActive('/ranking')}"><a href="/#/ranking" data-toggle="collapse" data-target=".navbar-ex1-collapse">Menu 2</a></li>
+	      <li ng-class="{ active: isActive('/rankClubs')}"><a href="/#/rankClubs" data-toggle="collapse" data-target=".navbar-ex1-collapse">Menu 3</a></li>
 	      <li ng-class="{ active: isActive('/nosotros')}"><a href="/#/nosotros"  data-toggle="collapse" data-target=".navbar-ex1-collapse">NOSOTROS</a></li>
 	    </ul>
-	
-	    <!--div class="ribbon hidden-xs"><span>Cruyff</span></div-->
 	  </div>
   </div>
 </nav>
-
-<!-- SEGUIMIENTO DE GOOGLE -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-75119061-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+-->
