--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,13 +2,13 @@ doctype html
 html(ng-app='BlogApp', lang="es")
   head
     title= title
-    script(src='/javascripts/angular/angular.js')
-    script(src='/javascripts/angular/angular-resource.js')
-    script(src='/javascripts/angular/angular-route.js')
-    script(src='/javascripts/bootstrap/angular-ui-bootstrap.js')
+    script(src='/javascripts/angular/angular.min.js')
+    script(src='/javascripts/angular/angular-resource.min.js')
+    script(src='/javascripts/angular/angular-route.min.js')
+    script(src='/javascripts/bootstrap/ui-bootstrap-tpls-1.3.3.min.js')
     link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/clean-blog.min.css')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     
     script(src='/javascripts/blogApp.js')
